# EEG-MRI-Analyzer

./: .gitignore  EEG.ipynb  MRI copy.ipynb  README.md  Untitled.ipynb  pyproject.toml  test.py  train_eeg.py  train_fmri.py
data/eeg_datasets/: convert_facelab.py  inner_speech.py
data/mri_datasets/: convert_facelab.py
data/transforms/: transform.py
