[tool.poetry]
name = "eeg-mri-analyzer"
version = "0.1.0"
description = "This project is my bachelors thesis and its goal is to provide a pretty accurate multimodal model for neuroimaging"
authors = ["Iaroslav Khripkov <yarikkhripkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pybids = "^0.16.4"
nibabel = "^5.2.0"
nilearn = "^0.10.2"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
