[tool.poetry]
name = "eeg-mri-analyzer"
version = "0.1.0"
description = "This project is my bachelors thesis and its goal is to provide a pretty accurate multimodal model for neuroimaging"
authors = ["Iaroslav Khripkov <yarikkhripkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pybids = "^0.16.4"
nibabel = "^5.2.0"
nilearn = "^0.10.2"
matplotlib = "^3.8.2"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
mne = "^1.6.1"
datasets = "^2.18.0"
seaborn = "^0.13.2"
nistats = "^0.0.1-rc.0"
fmriprep = "^23.2.1"
fmriprep-docker = "^23.2.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
